--- a/Model_ensembles.tex
+++ b/Model_ensembles.tex
@@ -1,6 +1,6 @@
 \documentclass[cheatsheet.tex]{subfiles}
 \begin{document}
-are  “meta” methods. Construct different models from adapted versions of the training data, Combine the predictions by averaging voting, weighted voting. a strong classifier from a set of weak classifiers. \textbf{Pros} improve performance, avoid over-fitting. 
+are  "meta" methods. Construct different models from adapted versions of the training data, Combine the predictions by averaging voting, weighted voting. a strong classifier from a set of weak classifiers. \textbf{Pros} improve performance, avoid over-fitting. 
 \\
 \textbf{Bagging} bootstrap aggregation. T models on different samples. Samples are training data with replacement choosen with uniform probability, called bootstrap sample. Decision boundary is \textit{piecewise linear}.(useful for tree model). \textbf{Subspace sampling} Build each decision tree from a different random subset of the features. $Bagging + subspace sampling = random forests method$. 
 \\
