--- a/Neural_network.tex
+++ b/Neural_network.tex
@@ -8,7 +8,7 @@
 
 \textbf{BP} minimize the squared error, iteratively propagate errors backwards from output units.$\Delta w_{ji}=\eta \delta_jz_{ji}$. \textbf{inductive bias}  smooth interpolation between data points. \textbf{termination condition} number of iterations, predetermined error threshold. \textbf{Overfitting} every iteration measure error on the validation set(cross-validation approach).\\
 
-\textbf{RL} agent learns behavior through trial-and-error interactions with a dynamic environment based on a reward signal(Game playing). \textbf{Rewards} from sequences of actions, can be separated temporally. \textbf{Q-learning} finds optimal action-selection policy for Markov Decision Process, learns an action-value function that gives the expected utility(convergence slow).\\
+\textbf{RL}(Reinforce learning) agent learns behavior through trial-and-error interactions with a dynamic environment based on a reward signal(Game playing). \textbf{Rewards} from sequences of actions, can be separated temporally. \textbf{Q-learning} finds optimal action-selection policy for Markov Decision Process, learns an action-value function that gives the expected utility(convergence slow).\\
 
 \textbf{Multi-label classification} class labels are not mutually exclusive.feature-to-class mapping, dependence between classes are learned.(blog post tags)\\
 
