--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -9,7 +9,8 @@
 \usepackage{vmargin}
 \usepackage{lipsum}
 \usepackage{subfiles}
-\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{graphicx}
 
 % A4
 \setpapersize[landscape]{A4}
@@ -42,16 +43,16 @@
 \begin{multicols}{3}
 \section{Key ingredients}
 \subfile{Key_ingredients}
-\section{Classification}	
+\section{Classification}
 \subfile{Classification}
+\section{beyond binary classification}
+\subfile{beyond_classification}
 \section{Concept learning}
 \subfile{Concept_learning}
 \section{Decision trees}
 \subfile{Decision_trees}
 \section{Linear models}
 \subfile{Linear_models}
-\section{beyond binary classification}
-\subfile{beyond_classification}
 \section{Distance-based models}
 \subfile{Distance-based_models}
 \section{Probabilistic models}
